--- a/app/src/main/res/layout-land/layout_list_item.xml
+++ b/app/src/main/res/layout-land/layout_list_item.xml
@@ -9,230 +9,242 @@
     android:paddingRight="15dp"
     android:paddingTop="1dp"
     android:paddingBottom="1dp">
-<!--item的height要固定，否则嵌套view会导致计数问题-->
+    <!--item的height要固定，否则嵌套view会导致计数问题-->
     <!--https://www.iteye.com/blog/fantaxy025025-1897771-->
-<LinearLayout
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:layout_weight="1">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
-    <com.playhard.studentmgr.MyView.CustomRoundAngleImageView
-        android:id="@+id/iv"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:scaleType="fitXY"
-        android:layout_gravity="center"
-        />
+        <com.playhard.studentmgr.MyView.CustomRoundAngleImageView
+            android:id="@+id/iv"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="fitXY"
+            android:layout_gravity="center"
+            />
 
-</LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="30dp"
+        android:layout_weight="3">
 
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="30dp"
-            android:layout_weight="3">
-
-
-            <LinearLayout
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tag_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="姓名："
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"/>
+                android:text="姓名："
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"/>
 
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:text="测试测试测试测试"
-                    android:singleLine="true"
-                    android:textColor="@color/colorBlack"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="学号："
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"/>
-
-                <TextView
-                    android:id="@+id/tv_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:text="测试测试测试测试"
-                    android:singleLine="true"
-                    android:textColor="@color/colorBlack"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="性别："
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"/>
-
-                <TextView
-                    android:id="@+id/tv_sex"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:text="测试测试测试测试"
-                    android:singleLine="true"
-                    android:textColor="@color/colorBlack"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="学院："
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"/>
-
-                <TextView
-                    android:id="@+id/tv_falc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:text="测试测试测试测试"
-                    android:singleLine="true"
-                    android:textColor="@color/colorBlack"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="专业："
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"/>
-
-                <TextView
-                    android:id="@+id/tv_spec"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:text="测试测试测试测试"
-                    android:singleLine="true"
-                    android:textColor="@color/colorBlack"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="爱好："
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"/>
-
-                <TextView
-                    android:id="@+id/tv_hob"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:text="测试测试测试测试"
-                    android:singleLine="true"
-                    android:textColor="@color/colorBlack"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="生日："
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"/>
-
-                <TextView
-                    android:id="@+id/tv_birth"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:text="测试测试测试测试"
-                    android:singleLine="true"
-                    android:textColor="@color/colorBlack"
-                    />
-            </LinearLayout>
-
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:text="测试测试测试测试"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tag_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="学号："
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"/>
+
+            <TextView
+                android:id="@+id/tv_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:text="测试测试测试测试"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tag_sex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="性别："
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"/>
+
+            <TextView
+                android:id="@+id/tv_sex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:text="测试测试测试测试"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tag_falc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="学院："
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"/>
+
+            <TextView
+                android:id="@+id/tv_falc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:text="测试测试测试测试"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tag_spec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="专业："
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"/>
+
+            <TextView
+                android:id="@+id/tv_spec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:text="测试测试测试测试"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tag_hob"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="爱好："
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"/>
+
+            <TextView
+                android:id="@+id/tv_hob"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:text="测试测试测试测试"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tag_birth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="生日："
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"/>
+
+            <TextView
+                android:id="@+id/tv_birth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:text="测试测试测试测试"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </LinearLayout>
